--- a/BlazorApp/docker-compose.yml
+++ b/BlazorApp/docker-compose.yml
@@ -1,6 +1,4 @@
-﻿version: '3.4'
-
-services:
+﻿services:
   postgres:
     image: postgres:latest
     container_name: postgres
@@ -23,6 +21,7 @@ services:
     ports:
       - "8080:8080"
     environment:
+      - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=blazorapp;Username=admin;Password=admin
     depends_on:
       - postgres
